--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/phs-santos/sipjs-easy.git"
+		"url": "git+https://github.com/phs-santos/easy-sipjs.git"
 	},
 	"keywords": [
 		"sip",
@@ -32,18 +32,20 @@
 		"webrtc",
 		"sip.js"
 	],
-	"author": "Paulo Henrique Souza <paulo18santos2000@gmail.com>",
+	"author": "Paulo Souza <paulo18santos2000@gmail.com>",
 	"bugs": {
-		"url": "https://github.com/phs-santos/sipjs-easy/issues"
+		"url": "https://github.com/phs-santos/easy-sipjs/issues"
 	},
 	"license": "ISC",
 	"devDependencies": {
+		"@types/jssip": "^3.5.3",
 		"@types/node": "^22.10.7",
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.9.3"
 	},
 	"dependencies": {
+		"jssip": "^3.13.5",
 		"sip.js": "^0.21.2"
 	}
 }
